tests/baselines/reference/typeReferenceDirectives2.errors.txt
/app.ts(1,1): error TS18055: Declaration file contains synthesized type reference directives: '"lib"'


==== /app.ts (1 errors) ====
    interface A {
    ~~~~~~~~~
!!! error TS18055: Declaration file contains synthesized type reference directives: '"lib"'
        x: $
    }
==== /types/lib/index.d.ts (0 errors) ====
    interface $ { x }
    